external/linksys/ingressroute.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: linksys
  namespace: external
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`linksys.claytonc.dev`)
    kind: Rule
    middlewares:
      - name: traefik-local-whitelist@kubernetescrd
    services:
    - name: linksys
      port: 80
  tls:
    secretName: linksys-tls
---
apiVersion: v1
kind: Service
metadata:
  name: linksys
  namespace: external
spec:
  externalName: 192.168.1.1
  type: ExternalName
